# anari-offaxis-sample-code

./: CMakeLists.txt  Projection.h  README.md  main.cpp  math-helpers.h
output/: stdout.txt
